package com.taxicooperativa.model;

import java.util.ArrayList;
import java.util.List;

public class Conductor {
    String nombre;
    String cedula;
    String placa;
    List<TipoServicio> tiposHabilitados;

}
