package com.taxicooperativa.model;

public class Zona {
    String zonaId;
}
